# skeletons

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
documents/: notes.md
documents/report/: main.tex
examples/: map.c  util.c  util.h
experiments/sum/: Makefile  fill.c  fill.h  main.c  skel-macros.h  sum.c  sum.h
scripts/: annotate.sh  loops.c  main.c  reorder.sh  run.sh
shapes/: CMakeLists.txt  map_1.c  map_2.c  map_3.c  map_4.c  runtest.sh
shapes/map/: map_1.c  map_2.c  map_4.c  map_5.c  map_6.c
src/: AnnotateSkeletonsAction.cc  AnnotateSkeletonsAction.hh  Common.cc  Common.hh  DetectDynamicASTConsumer.cc  DetectDynamicASTConsumer.hh  DetectDynamicAction.cc  DetectDynamicAction.hh  DetectSkeletonsASTConsumer.cc  DetectSkeletonsASTConsumer.hh  DetectSkeletonsAction.cc  DetectSkeletonsAction.hh  DynamicHandler.cc  DynamicHandler.hh  Flags.hh  Log.cc  Log.hh  Loop.cc  Loop.hh  LoopReorderer.cc  LoopReorderer.hh  MapMatcher.cc  MapMatcher.hh  MapVisitor.cc  MapVisitor.hh  main.cc
